tests/syntax/error_return_expr_no_return_type.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g error_return_expr_no_return_type.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_return_expr_no_return_type.silly: In function ‘foo’:
// CHECK: error_return_expr_no_return_type.silly:10:5: error: return expression found '0', but no return type for function foo
// CHECK:    10 |     RETURN 0;
// CHECK:       |     ^

FUNCTION foo(INT32 j)
{
    RETURN 0;
};
